--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:kpKNp2D9uImawpupafeLbq1MH/3DuQSE2/3S9qSjCRQ=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+BADRSHOP_URL=https://albadrsales.com/online/
+
+API_HASH_TOKEN=badr
+API_CHECK_REQUEST="*/api/*"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +16,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=mobile
 DB_USERNAME=root
 DB_PASSWORD=
 
